tests/valid/varuplevel.nim
# Count: 1
# Negative count: 0

var a: seq[int]
a.add(1)
const b: int = 3
