tests/invalid/varuplevel.nim
var a: seq[int]
a.add(1)
let b: int = 3
